# Peek-a-boo

./: README.md  index.html  pyproject.toml
reachy_basic_peek_a_boo/: main.py
reachy_basic_peek_a_boo/.claude/: settings.local.json
